Se agrego constante para permisos, con todos los permisos posibles de los modulos hasta ahora desarrollados

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -89,10 +89,12 @@
     <!-- Usuarios  -->
     <script src="app/usuarios/usuarios.dependencies.js"></script>
     <script src="app/usuarios/usuarios.routes.js"></script>
+    <script src="app/usuarios/usuarios.constants.js"></script>
     <script src="app/usuarios/control-roles/control-roles.controller.js"></script>
     <script src="app/usuarios/control-usuarios/control-usuarios.controller.js"></script>
     <script src="app/usuarios/usuarios.controller.js"></script>
     <script src="app/usuarios/recuperar-contrasena/recuperar-contrasena.controller.js"></script>
+    
 
     <!-- Mocks -->
     <script src="common/mocks/common.mocks.dependencies.js"></script>
