interfaz administracion mejorada

--- a/WebLegemClient/src/common/directives/noticias/wlegem-news.directive.html
+++ b/WebLegemClient/src/common/directives/noticias/wlegem-news.directive.html
@@ -11,8 +11,8 @@
 
     <div class="container_news">
 
-        <div style="align-self:center;padding: 0 40px;  display:flex;">
-            <div class="box_input_ico" style="width:400px;">
+        <div style="width:100%; padding: 0 40px;  display:flex; flex-wrap:wrap;">
+            <div class="box_input_ico" style="flex:1;width:50%; min-width:280px;max-width:300px;">
                     <div class="select_busqueda">
                         <select ng-model="vm.entidadFiltro" ng-change="vm.cargarDocumentos()">
                             <option ng-repeat="entidad in vm.entidades" ng-value="entidad.nombre">{{entidad.nombre}}</option>
@@ -21,7 +21,7 @@
                     </div>       
             </div>
 
-            <button class="btn_sin_ico" style="margin-left:20px;">ver todos</button>
+            <button class="btn_sin_ico" style="margin-left:20px; flex:0;">ver todos</button>
         </div>
 
 
