--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -173,6 +173,7 @@
     <link href="css/directivas/filtro_busqueda.css" rel="stylesheet" />
     <link href="css/directivas/sort_busqueda.css" rel="stylesheet" />
     <link href="css/directivas/resultado_busqueda.css" rel="stylesheet" />
+    <link href="css/directivas/widget_seguridad.css" rel="stylesheet" />
 
     <!--directivas-->
     <script src="common/directives/footer/wlegem-footer.directive.js"></script>
