mock y servicio roles

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -88,8 +88,8 @@
 
     <!-- Usuarios  -->
     <script src="app/usuarios/usuarios.dependencies.js"></script>
-    <script src="app/usuarios/usuarios.routes.js"></script>
     <script src="app/usuarios/usuarios.constants.js"></script>
+    <script src="app/usuarios/usuarios.routes.js"></script>        
     <script src="app/usuarios/control-roles/control-roles.controller.js"></script>
     <script src="app/usuarios/control-usuarios/control-usuarios.controller.js"></script>
     <script src="app/usuarios/usuarios.controller.js"></script>
@@ -102,6 +102,7 @@
     <script src="common/mocks/tipo-entidad-resource.mock.js"></script>
     <script src="common/mocks/entidad-resource.mock.js"></script>
     <script src="common/mocks/tipo-anotacion-resource.mock.js"></script>
+    <script src="common/mocks/rol-resource.mock.js"></script>
 
     <!-- Services -->
     <script src="common/services/common.services.js"></script>
@@ -111,6 +112,7 @@
     <script src="common/services/entidad-resource.service.js"></script>
     <script src="common/services/tipo-anotacion-resource.service.js"></script>
     <script src="common/services/documento-resource.service.js"></script>
+    <script src="common/services/rol-resource.service.js"></script>
 
     
     <!--Estilos-->
