interfaz de roles, y directivas funcionando, queda pendiente los estilos sincronizados con el modelo para permisos

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -53,6 +53,12 @@
     <script src="common/components/wl-lista-tipo-doc-hojitas/wl-lista-tipo-doc-hojitas.controller.js"></script>
     <script src="common/components/wl-lista-tipo-doc-hojitas/wl-lista-tipo-doc-hojitas.directive.js"></script>
 
+    <script src="common/components/wl-lista-roles/wl-lista-roles.controller.js"></script>
+    <script src="common/components/wl-lista-roles/wl-lista-roles.directive.js"></script>
+
+    <script src="common/components/wl-lista-permisos/wl-lista-permisos.controller.js"></script>
+    <script src="common/components/wl-lista-permisos/wl-lista-permisos.directive.js"></script>
+
 
     <!-- Login -->
     <script src="app/login/login.js"></script>
