--- a/WebLegemClient/src/common/directives/noticias/wlegem-news.directive.html
+++ b/WebLegemClient/src/common/directives/noticias/wlegem-news.directive.html
@@ -13,7 +13,7 @@
 
         <div style="width:100%; padding: 0 40px;  display:flex; flex-wrap:wrap;">
             <div class="box_input_ico" style="flex:1;width:50%; min-width:280px;max-width:300px;">
-                    <div class="select_busqueda">
+                    <div class="a_select">
                         <select ng-model="vm.entidadFiltro" ng-change="vm.cargarDocumentos()">
                             <option ng-repeat="entidad in vm.entidades" ng-value="entidad.nombre">{{entidad.nombre}}</option>
                             <option ng-value="null">Ninguna</option>
