Las constantes de roles fueron modificadas por servicios, y mocks, para posterior integracioon con los servicios de la api

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -109,6 +109,7 @@
     <script src="common/mocks/entidad-resource.mock.js"></script>
     <script src="common/mocks/tipo-anotacion-resource.mock.js"></script>
     <script src="common/mocks/rol-resource.mock.js"></script>
+    <script src="common/mocks/permisos-resource.mock.js"></script>
 
     <!-- Services -->
     <script src="common/services/common.services.js"></script>
@@ -119,7 +120,7 @@
     <script src="common/services/tipo-anotacion-resource.service.js"></script>
     <script src="common/services/documento-resource.service.js"></script>
     <script src="common/services/rol-resource.service.js"></script>
-
+    <script src="common/services/permisos-resource.service.js"></script>
     
     <!--Estilos-->
     <link href="css/elementos/text_area.css" rel="stylesheet" />
