--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -59,6 +59,9 @@
     <script src="common/components/wl-lista-permisos/wl-lista-permisos.controller.js"></script>
     <script src="common/components/wl-lista-permisos/wl-lista-permisos.directive.js"></script>
 
+    <script src="common/components/wl-lista-usuarios/wl-lista-usuarios.controller.js"></script>
+    <script src="common/components/wl-lista-usuarios/wl-lista-usuarios.directive.js"></script>
+
 
     <!-- Login -->
     <script src="app/login/login.js"></script>
@@ -110,6 +113,7 @@
     <script src="common/mocks/tipo-anotacion-resource.mock.js"></script>
     <script src="common/mocks/rol-resource.mock.js"></script>
     <script src="common/mocks/permisos-resource.mock.js"></script>
+    <script src="common/mocks/usuarios-resource.mock.js"></script>
 
     <!-- Services -->
     <script src="common/services/common.services.js"></script>
@@ -121,6 +125,7 @@
     <script src="common/services/documento-resource.service.js"></script>
     <script src="common/services/rol-resource.service.js"></script>
     <script src="common/services/permisos-resource.service.js"></script>
+    <script src="common/services/usuarios-resource.service.js"></script>
     
     <!--Estilos-->
     <link href="css/elementos/text_area.css" rel="stylesheet" />
@@ -194,6 +199,7 @@
     <script src="common/directives/info-rol/info-rol.directive.js"></script>
     <script src="common/directives/header/wlegem-header.directive.js"></script>
     <script src="common/directives/escudo-nombre/wlegem-escudo-nombre.directive.js"></script>
+    <script src="common/directives/wl-eventos/wl-eventos.directive.js"></script>
 
 
     <script src="common/directives/info-rol/info-rol.controller.js"></script>
