--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -12,6 +12,7 @@
 
     <!-- App Styles -->
     <!-- Library Scripts -->
+    <script src="../bower_components/underscore/underscore-min.js"></script>
     <script src="../bower_components/angular/angular.min.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="../bower_components/angular-animate/angular-animate.js"></script>
@@ -118,6 +119,7 @@
     <!-- Services -->
     <script src="common/services/common.services.js"></script>
     <script src="common/services/common.services.dependencies.js"></script>
+    <script src="common/services/underscore.service.js"></script>
     <script src="common/services/tipo-documento-resource.service.js"></script>
     <script src="common/services/tipo-entidad-resource.service.js"></script>
     <script src="common/services/entidad-resource.service.js"></script>
