cintilla puesta y logo

--- a/WebLegemClient/src/common/directives/escudo-nombre/wl-nombre.directive.html
+++ b/WebLegemClient/src/common/directives/escudo-nombre/wl-nombre.directive.html
@@ -1,4 +1,4 @@
-﻿<div style="position:absolute; left:0; display:flex;">
+﻿<div class="logo-wl1">
     <img src="recursos/escudos-logos/planeacion.png" style="height:65px;margin-top:-5px;" />
     <p style="font-family:'AbrilFatface-Regular'; color:white; font-size:40px; line-height:1.2;">Legem</p>
 </div>
