--- a/WebLegemClient/src/common/directives/mini-footer/wlegem-mini-footer.directive.html
+++ b/WebLegemClient/src/common/directives/mini-footer/wlegem-mini-footer.directive.html
@@ -1,19 +1,20 @@
 ﻿<div class="a_mini_footer">
-    <div class="sub_mini_footer1">
+    <div class="contenedor_simbolos">
         <div>
-            <img src="recursos/escudos-logos/Logo-Acreditacion-01_blanco.png" style="max-height:80px;max-width:70px;" />
-        </div>
+            <div>
+                <img src="recursos/escudos-logos/Logo-Acreditacion-01_blanco.png" />
+            </div>
 
-        <div>
-            <img src="recursos/escudos-logos/planeacion.png" style="max-height:80px;max-width:180px;" />
-        </div>
+            <div>
+                <img src="recursos/escudos-logos/planeacion.png" />
+            </div>
 
-        <div>
-            <img src="recursos/escudos-logos/escudo_111_years.png" style="max-height:80px;max-width:80px;" />
+            <div>
+                <img src="recursos/escudos-logos/escudo_111_years.png" />
+            </div>
         </div>
     </div>
     <div class="sub_mini_footer2">
         <p>Copyright © 2016 - Universidad de Nariño - San Juan de Pasto - Colombia</p>
     </div>
-
 </div>
