cambios menores antes de la reunion

--- a/WebLegemClient/src/common/directives/noticias/wlegem-news.directive.html
+++ b/WebLegemClient/src/common/directives/noticias/wlegem-news.directive.html
@@ -11,44 +11,41 @@
 
     <div class="container_news">
 
-        <div style="width:100%; padding: 0 10px;  display:flex;  ">
-            <div class="box_input_ico" style="flex:1;">
-                    <div class="a_select">
-                        <select ng-model="vm.entidadFiltro" ng-change="vm.cargarDocumentos()">
-                            <option ng-repeat="entidad in vm.entidades" ng-value="entidad.nombre">{{entidad.nombre}}</option>
-                            <option ng-value="null">Ninguna</option>
-                        </select>
-                    </div>       
-            </div>
-
-            <button class="btn_sin_ico" style="flex:0;">ver todos</button>
+        <div style="width:100%; padding: 0 10px;  display:flex; justify-content: center;">
+            <div class="box_input_ico" style="min-width: 280px;">
+                <div class="a_select"
+                            style="max-width: 300px; margin-right: 5px;">
+                    <select ng-model="vm.entidadFiltro" ng-change="vm.cargarDocumentos()">
+                        <option ng-repeat="entidad in vm.entidades" ng-value="entidad.nombre">{{entidad.nombre}}</option>
+                        <option ng-value="null">Ninguna</option>
+                    </select>
+                </div>       
+            </div>            
         </div>
 
 
         <div class="news_left">
      
           <div ng-if="true" class="tarjeta_news" ng-repeat="documento in vm.arregloDocs">
+                <div class="titulo_tarjeta">
+                    <a ng-click="vm.ver(documento.archivo)">{{ documento.tipoDocumento }} {{ documento.numero }} del {{ documento.fecha }}</a>
+                </div>
 
-                    <div class="titulo_tarjeta">
-                        <a ng-click="vm.ver(documento.archivo)">{{ documento.tipoDocumento }} {{ documento.numero }} del {{ documento.fecha }}</a>
-                    </div>
+                <div class="contenido_tarjeta">
+                    {{ documento.asunto | limitTo: 250: 200 }}
+                </div>
 
-                    <div class="contenido_tarjeta">
-                        {{ documento.asunto | limitTo: 250: 200 }}
-                    </div>
+                <div class="subcontenido_tarjeta">
+                    <a>Entidad: <i>{{ documento.entidad }} </i> | </a>
+                    <a>Fecha: <i>{{ documento.fecha  }} </i> | </a>
+                </div>
 
-                    <div class="subcontenido_tarjeta">
-                        <a>Entidad: <i>{{ documento.entidad }} </i> | </a>
-                        <a>Fecha: <i>{{ documento.fecha  }} </i> | </a>
-                    </div>
-
-                    <div class="control_tarjeta">
-                        <a href="http://localhost:50555/api/Files/{{ documento.archivo }}">
-                            <span class="ico-download"></span>Descargar
-                        </a>
-                    </div>
+                <div class="control_tarjeta">
+                    <a href="http://localhost:50555/api/Files/{{ documento.archivo }}">
+                        <span class="ico-download"></span>Descargar
+                    </a>
+                </div>
             </div>        
-
         </div>
     </div>
 </div>
