--- a/WebLegemClient/src/common/directives/info-rol/info-rol.directive.html
+++ b/WebLegemClient/src/common/directives/info-rol/info-rol.directive.html
@@ -1,4 +1,4 @@
-﻿<div class='ng-modal' ng-show='show'>
+﻿<div class='ng-modal' ng-if='show'>
 
     <div class='ng-modal-overlay'></div><!--Simula la opacidad de fondo del dialogo-->
     <div class='ng-modal-dialog'>
